test/asm/endsection-in-load.asm
SECTION "test", ROM0
LOAD "ram", WRAM0
ENDSECTION
ENDL
